wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_struct_missing_defer.stderr
error: expected `#[defer]` attribute to identify the field to defer into, found none
 --> tests/derive_error_category/fail_on_struct_missing_defer.rs:6:8
  |
6 | struct Error {
  |        ^^^^^
