wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_struct_missing_defer.rs
use wallet_common::ErrorCategory;

#[derive(ErrorCategory)]
#[category(defer)]
#[allow(dead_code)]
struct Error {
    field_1: String,
    field_2: String,
}

fn main() {}
